--- a/mythtv/libs/libmythhdhomerun/README
+++ b/mythtv/libs/libmythhdhomerun/README
@@ -1,5 +1,5 @@
 /*
- * libhdhomerun
+ * README
  *
  * Copyright © 2005-2006 Silicondust Engineering Ltd. <www.silicondust.com>.
  *
@@ -15,6 +15,19 @@
  *
  * You should have received a copy of the GNU Lesser General Public
  * License along with this library.  If not, see <http://www.gnu.org/licenses/>.
+ * 
+ * As a special exception to the GNU Lesser General Public License,
+ * you may link, statically or dynamically, an application with a
+ * publicly distributed version of the Library to produce an
+ * executable file containing portions of the Library, and
+ * distribute that executable file under terms of your choice,
+ * without any of the additional requirements listed in clause 4 of
+ * the GNU Lesser General Public License.
+ * 
+ * By "a publicly distributed version of the Library", we mean
+ * either the unmodified Library as distributed by Silicondust, or a
+ * modified version of the Library that is distributed under the
+ * conditions defined in the GNU Lesser General Public License.
  */
 
 Top level include file: hdhomerun.h
