Fixes #6787.  Use the Tango collection of weather icons in the default themes to give MythWeather a bit of a refresh.
git-svn-id: http://svn.mythtv.org/svn/trunk@21210 7dbf422c-18fa-0310-86e9-fd20926502f2

--- a/mythplugins/mythweather/AUTHORS
+++ b/mythplugins/mythweather/AUTHORS
@@ -8,6 +8,8 @@ Contributing:
     Weather Graphics
 	- Nathan Ziarek <nathan@ziarek.com>
 	  (www.ziarek.com)
+        - The Tango Collection of Public Domain icons
+          (tango.freedesktop.org/Tango_Desktop_Project)
 
     MythMusic Authors
 	- Base Application
