Update the mythbrowser README to reflect key binding change.
git-svn-id: http://svn.mythtv.org/svn/trunk@21283 7dbf422c-18fa-0310-86e9-fd20926502f2

--- a/mythplugins/mythbrowser/README
+++ b/mythplugins/mythbrowser/README
@@ -102,7 +102,7 @@ HISTORYFORWARD  Go forward to previous page",         F
 
 NEXTTAB         Move to next browser tab              P
 PREVTAB         Move to previous browser tab          <NO DEFAULT>
-DELETETAB       Delete the current browser tab        D
+DELETE          Delete the current browser tab        D
 
 ESCAPE          Exit                                  Escape
 MENU            Show poup menu                        M
