Add support for outputting p2p mpeg2 packet stream using firewire_tester. Fixes #5905.
git-svn-id: http://svn.mythtv.org/svn/trunk@21898 7dbf422c-18fa-0310-86e9-fd20926502f2

--- a/mythtv/contrib/development/firewire_tester/README
+++ b/mythtv/contrib/development/firewire_tester/README
@@ -15,6 +15,7 @@ firewire_tester <action> -n <node> [-P <port>] [-r <n>] [-v]
     -n <node>   - firewire node, required
     -P <port>   - firewire port, default 0
     -r <n>      - run action <n> times, default 1
+    -o          - output mpeg2 stream to stdout using p2p connection
     -v          - verbose
 
 There are 2 types of connections that can be used by mythtv to talk to 
