Fix MythWeather's current conditions screen not working with the NWS script. Thanks to Matt W for reporting the problems and Joe Ripley for the patch to fix them. Fixes #7128.
git-svn-id: http://svn.mythtv.org/svn/trunk@22117 7dbf422c-18fa-0310-86e9-fd20926502f2

--- a/mythplugins/mythweather/mythweather/scripts/README
+++ b/mythplugins/mythweather/mythweather/scripts/README
@@ -67,7 +67,7 @@ to display the screen, these are not provided by scripts, they are things like
 pause text or the current date and time.  A + prepending the item name signifies
 an item that is required to show the screen, these are provided by scripts.  The
 text of the name within the weather-ui.xml file (with prepending flag removed)
-must match exactly the string returned by the -T flag; as well as the token
+must match exactly the string returned by the '-t' flag; as well as the token
 returned when retrieving data.
 
 If you want to see the code that controls the scripts within the plugin, look at
