--- a/mythtv/programs/mythtranscode/replex/TODO
+++ b/mythtv/programs/mythtranscode/replex/TODO
@@ -1,8 +1,12 @@
-- fix/replace broken frames
+- check for dvdauthor audio PTS errors
+
+- check/fix/replace broken frames
 
 - split DVD output Files
 
 - use more than one input File
 
 - add cutting option
+
+- better handling of broken streams
 
