--- a/mythtv/contrib/Linux/init_scripts/README
+++ b/mythtv/contrib/Linux/init_scripts/README
@@ -12,4 +12,10 @@ They should both be renamed to remove any header information.  E.g.
 
     fedora.init.mythbackend  ->  /etc/init.d/mythbackend
 
+The "upstart" files should go in /etc/init/ and a symlink referencing the
+upstart-job binary should be created in /etc/init.d/ or /etc/rc.d/init.d/.
+
+    upstart.mythtv-backend.conf -> /etc/init/mythtv-backend.conf
+    ln -s /lib/init/upstart-job /etc/init.d/mythtv-backend
+
 - The MythTV Development Team
