Fix sort order in MythNetvision by removing unnecessary/broken qSort.
git-svn-id: http://svn.mythtv.org/svn/trunk@23186 7dbf422c-18fa-0310-86e9-fd20926502f2

--- a/mythplugins/mythnetvision/README
+++ b/mythplugins/mythnetvision/README
@@ -4,6 +4,11 @@ MythNetvision
 INSTALLATION:
 ---------------------------------------------------------------------
 
+Run MythPlugins ./configure with the option --enable-mythnetvision or
+--enable-all.
+
+-- Standalone config --
+
 run (a Qt4 version of) qmake on mythnetvision.pro:
 
 qmake-qt4 mythnetvision.pro
