avformat/flvenc: fix ticket 5976 and use old commit
mythtv have problem with non-seekable dont write duration and filesize
and there have problem with some other server and player with 0 value
duation and filesize.
So add a flv flags to fix the ticket and make a choose for users.

Fixes #12936

Signed-off-by: Steven Liu <lq@chinaffmpeg.org>
Signed-off-by: Jean-Yves Avenard <jyavenard@mozilla.com>

--- a/mythtv/external/FFmpeg/doc/muxers.texi
+++ b/mythtv/external/FFmpeg/doc/muxers.texi
@@ -147,6 +147,11 @@ Place AAC sequence header based on audio stream data.
 
 @item no_sequence_end
 Disable sequence end tag.
+
+@item no_duration_filesize
+Disable duration and filesize in metadata when they are equal to zero
+at the end of stream. (Be used to non-seekable living stream).
+
 @end table
 @end table
 
