--- a/mythtv/README
+++ b/mythtv/README
@@ -1,5 +1,5 @@
                                    MythTV
-                                Release 0.28
+                                Release v29
 
 NOTE
 ----
